# Image-Bluring-Assignment-2-HPC.

./: .dockerignore  CMakeLists.txt  README.md  docker-compose.yml  hostfile  run_instructions.txt
docker/: Dockerfile
include/: blur_processor.h  cli.h  constant.h  data_manager.h  mpi_manager.h
src/: blur_processor.cpp  cli.cpp  data_manager.cpp  main.cpp  mpi_manager.cpp
